--- a/css/consulta_reportes.css
+++ b/css/consulta_reportes.css
@@ -83,11 +83,14 @@ th {
     margin-bottom: 5px;
 }
 
-.modal-contenido img {
+.contenedor-imagenes img {
+    width: 200px;
     max-width: 100%;
-    border-radius: 6px;
-    border: 2px solid #2C1E53;
-    margin-top: 10px;
+    height: auto;
+}
+
+.paginacion {
+    color: black;
 }
 
 .cerrar {
@@ -104,10 +107,10 @@ th {
 
 .contenedor-imagenes {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-top: 15px;
+    justify-content: center;
     gap: 20px;
+    margin-top: 15px;
+    flex-wrap: wrap;
 }
 
 .contenedor-imagenes div {
@@ -118,3 +121,4 @@ th {
     margin-bottom: 6px;
     font-weight: bold;
 }
+
