--- a/css/gestionar_pisos.css
+++ b/css/gestionar_pisos.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Segoe UI', sans-serif;
-  background: url('../../images/fondo_PC.png') no-repeat center center fixed;
+  background: url('../images/fondo_PC.png') no-repeat center center fixed;
   background-size: cover;
   margin: 0;
   padding: 0;
@@ -8,7 +8,7 @@ body {
 }
 
 .contenedor-usuarios {
-  max-width: 500px;
+  width: 500px;
   margin: 50px auto;
   padding: 30px;
   background-color: rgba(255, 255, 255, 0.95);
