--- a/css/estadisticas_generales.css
+++ b/css/estadisticas_generales.css
@@ -1,7 +1,7 @@
 /* Fondo y estructura base */
 body {
   font-family: 'Segoe UI', sans-serif;
-  background: url('../../images/fondo_PC.png') no-repeat center center fixed;
+  background: url('../images/fondo_PC.png') no-repeat center center fixed;
   background-size: cover;
   backdrop-filter: blur(2px);
   margin: 0;
