--- a/css/usuarios_admin.css
+++ b/css/usuarios_admin.css
@@ -160,6 +160,40 @@ table img {
   color: #343062;
 }
 
+.paginacion {
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 35px;
+    font-size: 15px;
+}
+
+.paginacion a {
+    display: inline-block;
+    padding: 6px 12px;
+    margin: 0 2px;
+    background-color: #f0f0f0;
+    color: #333;
+    text-decoration: none;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.paginacion a:hover {
+    background-color: #2C1E53;
+    color: #fff;
+    transform: scale(1.05);
+}
+
+.paginacion a.pagina-actual {
+    background-color: #2C1E53;
+    color: #fff;
+    font-weight: bold;
+    border: none;
+    box-shadow: 0 0 6px rgba(106, 27, 154, 0.4);
+}
+
+
 /* ========= RESPONSIVO ========= */
 @media (max-width: 768px) {
   table {
